examples/v1.0.0/commercial/authorize/ts/invalid/authorize.receipt.invalid.2.ts
export const authorizeReceiptInvalid2: any = {
  x402: {
    verb: "authorize",
    version: "1.0.0"
  },
  status: "success",
  usage: {
    tokens: 10
  }
};
